--- a/dccwebproject/loginapp/templates/loginapp/messages.html
+++ b/dccwebproject/loginapp/templates/loginapp/messages.html
@@ -1,20 +1,24 @@
-<!-- {% for obj in chat %}
-    {% if obj.user == request.user %}
-        <li class="text-right list-group-item">{{ obj.message }}</li>
+{% extends 'loginapp/chat1.html' %}
+{% block hide %}{% endblock %}
+{% block messages %}
+    {% for message in messages %}
+    {% if message.sender == request.user %}
+<div class="card-panel right" style="width: 75%; position: relative">
+    <div style="position: absolute; top: 0; left:3px; font-weight: bolder" class="title">You</div>
+    {{ message }}
+</div>
     {% else %}
-        <li class="text-left list-group-item">{{ obj.message }}</li>
+<div class="card-panel left blue lighten-5" style="width: 75%; position: relative">
+    <div style="position: absolute; top: 0; left:3px; font-weight: bolder" class="title">{{ message.sender }}</div>
+    {{ message }}
+</div>
     {% endif %}
-{% empty %}
-    <li class="text-right list-group-item">No messages yet!</li>
-{% endfor %} -->
- {% for obj in chat %}
-
-        {%if obj.user == request.user%}
-            <li class="text-right list-group-item">{{ obj.message }}</li>
-        {%else%}
-            <li class="text-left list-group-item">{{ obj.message }}</li>
-
-        {%endif%}
-        {% empty %}
-        <li class="text-right list-group-item">No messages yet!</li>
-{% endfor %}
+    {% endfor %}
+<script>
+$(function () {
+    $('#user{{ receiver.id }}').addClass('active');
+    //Call receive function each 1 seconds to check for new messages in the database
+    setInterval(receive,1000)
+})
+</script>
+{% endblock %}
