--- a/dccwebproject/loginapp/templates/loginapp/customerlist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/customerlist1.html
@@ -439,6 +439,7 @@
                                <th>City</th>
                                 <th>Email</th>
                                <th>Fax</th>
+                               <th>Update</th>
                              </tr>
                               {% for list in customobjs %}
                              <tr>
